--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./server/server.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "morgan": "~1.6.1",
     "mysql": "^2.8.0",
     "passport": "^0.2.2",
